--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "node-sass": "^4.13.0",
@@ -70,7 +70,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "react-test-renderer": "^16.9.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "husky": "^3.1.0",
